src/core/window-props.c
@@ -1619,7 +1619,7 @@ reload_transient_for (MetaWindow    *window,
     meta_window_group_leader_changed (window);
 
   if (!window->constructing && !window->override_redirect)
-    meta_window_queue (window, META_QUEUE_MOVE_RESIZE);
+    meta_window_queue (window, META_QUEUE_MOVE_RESIZE | META_QUEUE_CALC_SHOWING);
 
   if (meta_window_appears_focused (window) && window->xtransient_for != None)
     meta_window_propagate_focus_appearance (window, TRUE);
